--- a/foundry.toml
+++ b/foundry.toml
@@ -3,25 +3,10 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
-optimizer = true
-optimizer_runs = 200
-via_ir = true
-
-[rpc_endpoints]
-mainnet = "${ETH_RPC_URL}"
-sepolia = "${SEPOLIA_RPC_URL}"
-
-[etherscan]
-mainnet = { key = "${ETHERSCAN_API_KEY}" }
-sepolia = { key = "${ETHERSCAN_API_KEY}" }
-
 # Remappings
 remappings = [
     "@openzeppelin/=lib/openzeppelin-contracts/",
-    "@uniswap/v3-core/=lib/v3-core/",
-    "@uniswap/v3-periphery/=lib/v3-periphery/",
-    "@balancer-labs/=lib/balancer-v2-monorepo/",
-    "@chainlink/=lib/chainlink/",
+    "forge-std/=lib/forge-std/src/",
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
