--- a/foundry.toml
+++ b/foundry.toml
@@ -7,6 +7,8 @@ libs = ["lib"]
 optimizer = true
 optimizer_runs = 1000000
 via_ir = true
+ffi = true
+fs_permissions = [{ access = "read", path = ".env" }]
 
 # Gas reporting
 gas_reports = ["ArbitrageBot"]
@@ -17,9 +19,12 @@ remappings = [
     "forge-std/=lib/forge-std/src/",
 ]
 
-# For building with --via-ir
-[profile.via-ir]
-via_ir = true
+# Load environment variables
+load_dotenv = true
+
+[rpc_endpoints]
+mainnet = "${ETH_RPC_URL}"
+sepolia = "${SEPOLIA_RPC_URL}"
 
 # For gas optimizing
 [profile.optimized]
