--- a/foundry.toml
+++ b/foundry.toml
@@ -32,4 +32,11 @@ via_ir = true
 optimizer = true
 optimizer_runs = 1000000
 
+# Deploy profile with specific settings for deployment
+[profile.deploy]
+via_ir = true
+optimizer = true
+optimizer_runs = 1000000
+gas_reports = ["ArbitrageBot"]
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
